# TAL_QR_T613

./: .gitignore  CMakeLists.txt  Makefile  README.md  exports.def  meson.build
.github/workflows/: build.yml  main.yml
src/: dllmain.cpp
src/scanner/: qrcode.cpp  scanner.h
